# boxer

./: LICENSE  README.md
boxer_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_control/config/: control.yaml  empty.yaml  robot_localization.yaml  teleop.yaml  twist_mux.yaml
boxer_control/launch/: control.launch  status.launch  teleop.launch
boxer_description/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
boxer_description/launch/: description.launch
boxer_description/meshes/: hokuyo_uam_05lp.stl  rear_sensor.stl  vecow_evs2000.stl
boxer_description/urdf/: boxer.gazebo  boxer.urdf.xacro
boxer_description/urdf/include/: antenna.urdf.xacro  mini_itx.urdf.xacro  sensors.urdf.xacro  vecow_ecx1000.urdf.xacro  vecow_ecx2000.urdf.xacro  vecow_evs2000.urdf.xacro  wheels_and_casters.urdf.xacro
boxer_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
boxer_navigation/launch/include/: move_base.launch
boxer_navigation/maps/: boxer_world.yaml
boxer_navigation/params/: costmap_common_params.yaml
